<resources>
    <string name="app_name">PilotoAPIS_gc</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="archivos">Archivos</string>
    <string name="picasso_fmw">Picasso Fmw</string>
    <string name="mapa">Mapa</string>
    <string name="grillas">Grillas</string>
    <string name="gps">GPS</string>
    <string name="c_mara">Cámara</string>
</resources>
