<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="396dp"
        android:layout_height="552dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="365dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <Button
                android:id="@+id/btn_camara"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/c_mara"
                tools:layout_editor_absoluteX="121dp"
                tools:layout_editor_absoluteY="229dp" />

            <Button
                android:id="@+id/btn_archivos"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/archivos"
                tools:layout_editor_absoluteX="121dp"
                tools:layout_editor_absoluteY="309dp" />

            <Button
                android:id="@+id/btn_picasso"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/picasso_fmw"
                tools:layout_editor_absoluteX="121dp"
                tools:layout_editor_absoluteY="137dp" />

            <Button
                android:id="@+id/btn_mapa"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/mapa"
                tools:layout_editor_absoluteX="121dp"
                tools:layout_editor_absoluteY="483dp" />

            <Button
                android:id="@+id/btn_grillas"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/grillas"
                tools:layout_editor_absoluteX="121dp"
                tools:layout_editor_absoluteY="64dp" />

            <Button
                android:id="@+id/btn_gps"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:text="@string/gps"
                tools:layout_editor_absoluteX="121dp"
                tools:layout_editor_absoluteY="403dp" />
        </LinearLayout>
    </TableRow>

</android.support.constraint.ConstraintLayout>